<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main3Activity">

    <TextView
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="@color/background_Colour"
        android:gravity="center"
        android:text="@string/dadporishkar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <ImageView
        android:src="@drawable/dadt_poriskar"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp">

    </ImageView>
    <ImageView
        android:background="@color/background_Colour"
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </ImageView>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/dadp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/dadp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/dadp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>


</LinearLayout>