<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Main8Activity">
    <TextView
        android:textStyle="bold"
        android:background="@color/background_Colour"
        android:textColor="@color/txt_Colour"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <ImageView
        android:src="@drawable/other"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp">

    </ImageView>
    <ImageView
        android:background="@color/background_Colour"
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </ImageView>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/other1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/other2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/other3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

</LinearLayout>