<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MessageFragment">
    <TextView
        android:background="@color/background_Colour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

    </TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/sirial"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="120dp">

            </ImageView>
            <TextView

                android:padding="10dp"
                android:textColor="@color/txt_Colour"
                android:text="@string/NAME6"
                android:background="@color/background_Colour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <EditText
                android:background="@drawable/text"
                android:padding="10dp"
                android:maxLength="25"
                android:id="@+id/s1"
                android:layout_margin="10dp"
                android:hint="@string/NAME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
            <EditText
                android:background="@drawable/text"
                android:padding="10dp"
                android:maxLength="2"
                android:inputType="numberDecimal"
                android:id="@+id/s2"
                android:layout_margin="10dp"
                android:hint="@string/NAME1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
            <EditText
                android:background="@drawable/text"
                android:padding="10dp"
                android:maxLength="11"
                android:id="@+id/s3"
                android:inputType="numberDecimal"
                android:layout_margin="10dp"
                android:hint="@string/NAME3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
            <EditText
                android:background="@drawable/text"
                android:padding="10dp"
                android:maxLength="25"
                android:id="@+id/s5"
                android:hint="@string/NAME4"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
            <EditText
                android:background="@drawable/text"
                android:padding="10dp"
                android:maxLength="10"
                android:id="@+id/s4"
                android:inputType="date"
                android:hint="@string/NAME5"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
            <Button
                android:textSize="20sp"
                android:id="@+id/send"
                android:layout_gravity="center"
                android:textColor="@color/txt_Colour"
                android:background="@drawable/button1"
                android:text="@string/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <ImageView
                android:layout_marginTop="20dp"
                android:background="#FAF6F6"
                android:layout_width="match_parent"
                android:layout_height="55dp">
            </ImageView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>